--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Javascript Course</title>
 </head>
 <body>
-    <script src="script-001.js"></script>
+    <!-- <script src="script-001.js"></script> -->
+    <script src="script-002.js"></script>
 </body>
 </html>
