--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Javascript Course</title>
 </head>
 <body>
-    <!-- <script src="script-001.js"></script> -->
-    <script src="script-002.js"></script>
+    <!-- <script src="script-001.js">Introduction to JS</script> -->
+    <!-- <script src="script-002.js">Data type</script> -->
+    <script src="script-003.js">Operator</script>
 </body>
 </html>
