--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <!-- <script src="script-001.js">Introduction to JS</script> -->
     <!-- <script src="script-002.js">Data type</script> -->
-    <script src="script-003.js">Operator</script>
+    <!-- <script src="script-003.js">Operator</script> -->
+    <!-- <script src="script-004.js">Conditional Operator and Statement</script> -->
+    <script src="script-004.js"></script>
 </body>
 </html>
