--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="script-002.js">Data type</script> -->
     <!-- <script src="script-003.js">Operator</script> -->
     <!-- <script src="script-004.js">Conditional Operator and Statement</script> -->
-    <script src="script-004.js"></script>
+    <!-- <script src="script-005.js">Swith Statement</script> -->
+    <script src="script-005.js"></script>
 </body>
 </html>
