--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="script-003.js">Operator</script> -->
     <!-- <script src="script-004.js">Conditional Operator and Statement</script> -->
     <!-- <script src="script-005.js">Swith Statement</script> -->
-    <script src="script-005.js"></script>
+    <!-- <script src="script-006.js">Iteration Statement</script> -->
+    <script src="script-006.js"></script>
 </body>
 </html>
