--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="script-004.js">Conditional Operator and Statement</script> -->
     <!-- <script src="script-005.js">Swith Statement</script> -->
     <!-- <script src="script-006.js">Iteration Statement</script> -->
-    <script src="script-006.js"></script>
+    <!-- <script src="script-007.js">Array</script> -->
+    <script src="script-007.js"></script>
 </body>
 </html>
