--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="script-005.js">Swith Statement</script> -->
     <!-- <script src="script-006.js">Iteration Statement</script> -->
     <!-- <script src="script-007.js">Array</script> -->
-    <script src="script-008.js"></script>
+    <!-- <script src="script-008.js">Function</script> -->
+    <script src="script-009.js"></script>
 </body>
 </html>
